--- a/Backoffice/Pages/LiquidityEngine.razor
+++ b/Backoffice/Pages/LiquidityEngine.razor
@@ -20,7 +20,8 @@
     
     @if (ActivePage == Menus.MarketMaker)
     {
-        <LiquidityEngineComponent/>
+        //<LiquidityEngineComponent/>
+        <LiquidityProviderComponent />
     }
     
     @if (ActivePage == Menus.Wallets)
