--- a/Backoffice/Components/Liquidity/Market2/LpDetailComponent.razor
+++ b/Backoffice/Components/Liquidity/Market2/LpDetailComponent.razor
@@ -95,9 +95,7 @@
                 <LpSourceSettingsComponent Sources="@Provider.LpSources" ExternalMarkets="@ExternalMarkets" IsEdit="@IsEdit" />
             </td>
             <td>
-                <table>
-                    
-                </table>
+                <LpHedgeSettingsComponent Sources="@Provider.LpHedges" ExternalMarkets="@ExternalMarkets" IsEdit="@IsEdit" />
             </td>
         </tr>
         <tr>
