--- a/Backoffice/_Imports.razor
+++ b/Backoffice/_Imports.razor
@@ -24,6 +24,7 @@
 @using Backoffice.Components.Liquidity
 @using Backoffice.Components.Liquidity.Market2
 @using Backoffice.Components.Liquidity.Portfolio
+@using Backoffice.Components.Liquidity.Portfolio.Components
 @using Backoffice.Components.Liquidity.Settings
 @using Backoffice.Components.Liquidity.Wallets
 @using Backoffice.Components.Books
