--- a/Backoffice/Pages/LiquidityEngine.razor
+++ b/Backoffice/Pages/LiquidityEngine.razor
@@ -1,5 +1,7 @@
 ﻿@page "/LiquidityEngine"
 
+@using Backoffice.Components.Liquidity.ExternalMarkets
+
 
 <ul class="nav nav-tabs nav-pills">
     <li class="nav-item" style="margin: 10px">
@@ -12,8 +14,11 @@
         <button class="nav-link @CheckActive(Menus.Settings)" @onclick="SetSettings" >Settings</button>
     </li>
     <li class="nav-item" style="margin: 10px">
-            <button class="nav-link @CheckActive(Menus.Wallets)" @onclick="SetWallets" >Wallets</button>
-        </li>
+        <button class="nav-link @CheckActive(Menus.Wallets)" @onclick="SetWallets" >Wallets</button>
+    </li>
+    <li class="nav-item" style="margin: 10px">
+        <button class="nav-link @CheckActive(Menus.ExternalMarkets)" @onclick="SetExternalMarkets" >ExternalMarkets</button>
+    </li>
 </ul>
 
 <div style="margin: 10px">
@@ -39,6 +44,11 @@
     @if (ActivePage == Menus.Settings)
     {
         <LiquiditySettingsComponent/>
+    }
+    
+    @if (ActivePage == Menus.ExternalMarkets)
+    {
+        <ExernalMarketComponent />
     }
 
 </div>
@@ -79,7 +89,8 @@
         MarketMaker,
         Portfolio,
         Settings,
-        Wallets
+        Wallets,
+        ExternalMarkets
     }
     
 
@@ -92,6 +103,11 @@
     private void SetWallets()
     {
         SetActive(Menus.Wallets);
+    }
+
+    private void SetExternalMarkets()
+    {
+        SetActive(Menus.ExternalMarkets);
     }
 
 }
