- changes in bitgo coins/assets models;

--- a/Backoffice/Components/BitGo/Assets/BitGoAssetDetailsDialog.razor
+++ b/Backoffice/Components/BitGo/Assets/BitGoAssetDetailsDialog.razor
@@ -9,6 +9,7 @@
                 <tr><td>Symbol</td><td class="float-left">@Item.AssetSymbol</td></tr>
                 <tr></tr>
                 <tr><td>BitGo wallet</td><td class="float-left">@Item.BitgoWalletId</td></tr>
+                <tr><td>Enabled BitGo wallets</td><td class="float-left">@Item.EnabledBitgoWalletIds</td></tr>
                 <tr><td>BitGo coin</td><td class="float-left">@Item.BitgoCoin</td></tr>
             </table>
         </td>
