--- a/Backoffice/_Imports.razor
+++ b/Backoffice/_Imports.razor
@@ -20,7 +20,8 @@
 @using Radzen.Blazor
 @using Backoffice.Components.Common
 @using Backoffice.Components.Assets
-@using Backoffice.Components.BitGoAssets
+@using Backoffice.Components.BitGo.Assets
+@using Backoffice.Components.BitGo.Coins
 @using Backoffice.Components.SpotInstruments
 @using Backoffice.Components.Liquidity
 @using Backoffice.Components.Liquidity.Market2
