--- a/Backoffice/_Imports.razor
+++ b/Backoffice/_Imports.razor
@@ -32,5 +32,7 @@
 @using Backoffice.Components.Liquidity.Wallets
 @using Backoffice.Components.Books
 @using Backoffice.Components.Clients
-
-
+@using Backoffice.Components.SmsSender.History
+@using Backoffice.Components.SmsSender.Mock
+@using Backoffice.Components.SmsSender.Providers
+@using Backoffice.Components.SmsSender.Templates
